# FocusArc

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema.py  0002_add_cycle_totals.py
backend/app/: auth.py  db.py  main.py  settings.py
backend/app/api/: end_day.py  router.py  sessions.py  stats.py  timers.py  totals.py
backend/app/models/: __init__.py  day_summary.py  session.py  timer.py  user.py
backend/app/schemas/: session.py  stats.py  timer.py  totals.py
backend/app/services/: sessions.py  stats.py  timers.py
backend/tests/: conftest.py  test_api_integration.py  test_sessions_unit.py
docker/postgres/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: apiClient.ts  types.ts
frontend/src/components/: DayTimeline.tsx  EndDayButton.tsx  MainLayout.tsx  PrimaryNav.tsx  SessionBlock.tsx  Sidebar.tsx  TimerCard.tsx  TimerFormModal.tsx  TopBar.tsx  WeekAccordion.tsx
frontend/src/context/: TimerRuntimeContext.tsx  TimerSelectionContext.tsx
frontend/src/hooks/: useActiveSession.ts  useAverages.ts  useDayStats.ts  useScheduleDay.ts  useScheduleWeek.ts  useSessions.ts  useStatsWeek.ts  useTimers.ts
frontend/src/routes/: HistoryPage.tsx  SchedulePage.tsx  StatsPage.tsx  TimersPage.tsx  UsernameGate.tsx
frontend/src/utils/: color.ts  date.ts  time.ts
